--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -7,6 +7,19 @@
     <link href="https://fonts.googleapis.com/css2?family=Numans&family=Play&display=swap" rel="stylesheet" />
     <link rel="icon" type="image/png+xml" href="/imgLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="author" content="Elvis Felix">
+    <meta
+      name="keywords"
+      content="Serviços, Prestação de Serviços, Elvis Felix ,Trabalho, 2System, BarberShop, barbearia, shop, haircut, hair"
+    >
+    <meta name="theme-color" content="#312e38" />
+
+    <meta
+      name="description"
+      content="Vem para te tornar uma lenda"
+    />
+
     <title>BarberShop</title>
   </head>
   <body>
